--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.qa.junit</groupId>
     <artifactId>rerunner-jupiter</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <name>Rerunner-Jupiter</name>
     <description>
@@ -27,7 +27,7 @@
     </licenses>
 
     <scm>
-        <url>http://github.com/artsok/rerunner-jupiter</url>
+        <url>https://github.com/artsok/rerunner-jupiter</url>
         <connection>scm:git:git://github.com/artsok/rerunner-jupiter.git</connection>
         <developerConnection>scm:git:git@github.com:artsok/rerunner-jupiter.git</developerConnection>
     </scm>
@@ -35,7 +35,6 @@
         <system>GitHub Issues</system>
         <url>https://github.com/artsok/rerunner-jupiter/issues</url>
     </issueManagement>
-
     <properties>
         <junit.jupiter.version>5.0.0</junit.jupiter.version>
         <junit.platform.version>1.0.0</junit.platform.version>
@@ -46,8 +45,12 @@
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -82,6 +85,26 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <connectionUrl>scm:git:https://github.com/artsok/rerunner-jupiter.git</connectionUrl>
+                    <stagingRepository>ossrh::default::https://oss.sonatype.org/content/repositories/snapshots</stagingRepository>
+                    <autoversionsubmodules>true</autoversionsubmodules>
+                    <usereleaseprofile>false</usereleaseprofile>
+                    <releaseprofiles>release</releaseprofiles>
+                    <goals>deploy</goals>
+                    <checkmodificationexcludes>
+                        <checkmodificationexclude>./travis/*.sh</checkmodificationexclude>
+                        <checkmodificationexclude>**/*.java</checkmodificationexclude>
+                        <checkmodificationexclude>**/*.md</checkmodificationexclude>
+                        <checkmodificationexclude>**/pom.xml</checkmodificationexclude>
+                        <checkmodificationexclude>.travis.yml</checkmodificationexclude>
+                    </checkmodificationexcludes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <dependencies>
@@ -99,24 +122,9 @@
             </plugin>
         </plugins>
     </build>
-
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <name>Sonatype Nexus release repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
     <profiles>
         <profile>
-            <id>release-sign-artifacts</id>
+            <id>release</id>
             <activation>
                 <property>
                     <name>performRelease</name>
@@ -138,6 +146,32 @@
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
                                 </goals>
                             </execution>
                         </executions>
