--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.qa.junit</groupId>
     <artifactId>rerunner-jupiter</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <name>Rerunner-Jupiter</name>
     <description>
@@ -28,8 +30,7 @@
         <url>https://github.com/artsok/rerunner-jupiter</url>
         <connection>scm:git:git://github.com/artsok/rerunner-jupiter.git</connection>
         <developerConnection>scm:git:git@github.com:artsok/rerunner-jupiter.git</developerConnection>
-      <tag>1.0-SNAPSHOT</tag>
-  </scm>
+    </scm>
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/artsok/rerunner-jupiter/issues</url>
