improve travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ addons:
         organization: "artsok-github"
         token:
             secure: $SONAR_TOKEN
-    git
+    github_token:
+      secure: $GIT_TOKEN
 
 
 cache:
