--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <owner.version>1.0.6</owner.version>
     </properties>
     <distributionManagement>
         <snapshotRepository>
@@ -83,8 +84,8 @@
         </dependency>
         <dependency>
             <groupId>org.aeonbits.owner</groupId>
-            <artifactId>owner</artifactId>
-            <version>1.0.8</version>
+            <artifactId>owner-java8</artifactId>
+            <version>${owner.version}</version>
         </dependency>
     </dependencies>
 
