--- a/rerun.properties
+++ b/rerun.properties
@@ -1,4 +1,4 @@
 rerun.enable = true
 rerun.minSuccess = 4
-rerun.totalRepeats = 100
-rerun.exceptions = IOException.class, NoSuchElementException.class
+rerun.totalRepeats = 1
+rerun.exceptionPool = IOException.class, NoSuchElementException.class
