--- a/rerun.properties
+++ b/rerun.properties
@@ -1,4 +1,4 @@
-rerun.enable = true
+rerun.enable = false
 rerun.minSuccess = 4
-rerun.totalRepeats = 1
+rerun.totalRepeats = 2
 rerun.exceptionPool = IOException.class, NoSuchElementException.class
