--- a/rerun.properties
+++ b/rerun.properties
@@ -1,4 +1,4 @@
 rerun.enable = false
 rerun.minSuccess = 4
-rerun.totalRepeats = 2
-rerun.exceptionPool = IOException.class, NoSuchElementException.class
+rerun.totalRepeats = 102
+rerun.exceptionClasses = java.io.IOException, java.util.NoSuchElementException
