--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <version>${allure-junit5.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
