try rerun test with Request - Fail.
Все инструменты запуска (mvn, IDEA Junit 5 Plugin) создают свой Lancher Reuqst и TestPlan. В послднем уже определяют какие тесты запускаются.

--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
         <url>https://github.com/artsok/rerunner-jupiter/issues</url>
     </issueManagement>
     <properties>
-        <junit.jupiter.version>5.0.3</junit.jupiter.version>
-        <junit.platform.version>1.0.3</junit.platform.version>
+        <junit.jupiter.version>5.1.0</junit.jupiter.version>
+        <junit.platform.version>1.1.0</junit.platform.version>
         <lombok.version>1.16.16</lombok.version>
         <mockito-core.version>2.10.0</mockito-core.version>
         <slf4j.version>1.7.5</slf4j.version>
@@ -69,6 +69,18 @@
             <artifactId>junit-platform-runner</artifactId>
             <version>${junit.platform.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>${junit.platform.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -158,6 +170,7 @@
                             <name>allure.results.directory</name>
                             <value>${project.build.directory}/allure-results</value>
                         </property>
+                        //Enabling Automatic Extension Detection
                         <property>
                             <name>junit.jupiter.extensions.autodetection.enabled</name>
                             <value>true</value>
