Run tests programmatically and check for repetitions

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
+                <configuration>
+                    <properties>
+                        <excludeTags>programmatic-tests</excludeTags>
+                    </properties>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
