--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>io.github.artsok</groupId>
     <artifactId>rerunner-jupiter</artifactId>
     <version>1.1.2-SNAPSHOT</version>
-    <name>Reunner-Jupiter</name>
+    <name>Rerunner-Jupiter</name>
     <description>
         JUnit 5 Extension point which rerun failed tests certain number of times
     </description>
